# corpex

./: .env  .env.example  .gitignore  Cargo.toml  Corpex.bat  Dockerfile  demo.json  docker-entrypoint.sh  index.html  nginx.conf
src/: app.rs  cache.rs  config.rs  lib.rs  main.rs  platform.rs
src/ai/: mod.rs  prompts.rs  provider.rs
src/ch_api/: client.rs  types.rs
src/export/: mod.rs
src/extraction/: mod.rs  pdf.rs  pipeline.rs  xhtml.rs
src/investigation/: group.rs  mod.rs  network.rs
src/ui/: analysis_panel.rs  company_panel.rs  dashboard.rs  filings_panel.rs  landing.rs  mod.rs  network_graph.rs  officers_panel.rs  search_panel.rs  settings_panel.rs  styles.rs
tests/: smoke_test.sh
