[package]
name = "corpex"
version = "0.1.0"
edition = "2021"
description = "Companies House corporate investigation desktop tool"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "corpex"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui_graphs = "0.22"

# Graph data structure
petgraph = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing
scraper = "0.22"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"

# Conditional compilation helper
cfg-if = "1"

# ── Native-only dependencies ────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
pdf-extract = "0.7"
dirs = "6"
open = "5"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── WASM-only dependencies ──────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }

[profile.release]
opt-level = 3
lto = true
strip = true
